--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
-server.port=8090
+server.port=8085
+spring.data.mongodb.authentication-database=admin
+spring.data.mongodb.username=root
+spring.data.mongodb.password=root123
+spring.data.mongodb.database=user_db
+spring.data.mongodb.port=27017
+spring.data.mongodb.host=localhost
+
+com.stackroute.username="xyz"
